# Training-Incubation

./: Flowchart.drawio  currencyConverter.txt  usersstory.txt
Assignment/: CMakeLists.txt  Divisible.cpp  Even.cpp  Factorial.cpp  Febonacci.cpp  NEven.cpp  NOdd.cpp  Natural.cpp  Negative.cpp  Odd.cpp  Positive.cpp  Power.cpp  Prime.cpp
Assignment-3/: AddOne.cpp  CMakeLists.txt  Circle.cpp  Compare.cpp  Divisible.cpp  Largest.cpp  Multiply.cpp  ProfitLoss.cpp  Reverse.cpp  Set.cpp  Smallest.cpp  Sum.cpp  SumFirstLast.cpp
String Assignment/: AlphaNumeric.cpp  Alphabetic.cpp  Alternate.cpp  CMakeLists.txt  Digits.cpp  LowerCase.cpp  Position1.cpp  Position2.cpp  Reverse.cpp  StringLength.cpp  StringTruncate.cpp  UpperCase.cpp  Vowels.cpp
T&I Programs/: CMakeLists.txt  Circle.cpp  Circle.txt  CurrencyConverter.txt  FileHandling.cpp  GrossSalary.cpp  GrossSalaryTest.txt  Sort.cpp  Sort.txt  StudentRecord.cpp  Triangle.cpp  ValidIdentifer.txt  ValidIdentifier.cpp  ValidTriangle.cpp  ValidTriangle.txt  countFile.txt  student.cpp  student.h
