cmake_minimum_required(VERSION 3.23)
project(T_I_Programs)

set(CMAKE_CXX_STANDARD 14)

add_executable(GrossSalary
        GrossSalary.cpp)

add_executable(ValidIdentifier ValidIdentifier.cpp)

add_executable(ValidTriangle ValidTriangle.cpp)
add_executable(Circle Circle.cpp)

add_executable(Triangle Triangle.cpp)
add_executable(Sort Sort.cpp)
add_executable(student student.cpp)
add_executable(FileHandling FileHandling.cpp)
add_executable(StudentRecord StudentRecord.cpp)